more web-pages added

--- a/blog.html
+++ b/blog.html
@@ -11,18 +11,21 @@
 <body>
     <div class="container">
         <nav class="main-nav">
-            <a href="#"><img src="./images/logo-personalpic/30px my logo for website.png" alt="logo"></a>
+            <a href="./index.html"><img src="./images/logo-personalpic/30px my logo for website.png" alt="logo"></a>
             <ul class="nav-buttons">
-                <li><a href="#">Work</a></li>
-                <li class="nav-page-on"><a href="#" >Blog</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="./work.html">Work</a></li>
+                <li class="nav-page-on"><a href="./blog.html" >Blog</a></li>
+                <li><a href="./about.html">About</a></li>
+                <li><a href="./contact.html">Contact</a></li>
             </ul>
         </nav>
 
         <main>
             <div class="page-title">
-                <h1>Blogs</h1>
+                <div class="title-wave">
+                    <h1>Blogs</h1>
+                    <img src="./images/waves-design/subtitle-wave.png" alt=" shape design">
+                </div>
             </div>
             <div class="blogs">
                 <div class="blog"> 
@@ -63,7 +66,7 @@
         <footer class="footer">
             <div class="left-footer">
                 <p>FOLLOW</p>
-                <a href="#">Instagram</a>
+                <a href="https://www.instagram.com/miroslens/">Instagram</a>
             </div>
     
             <div class="right-footer">
