--- a/contact.html
+++ b/contact.html
@@ -11,12 +11,12 @@
 <body>
     <div class="container">
         <nav class="main-nav">
-            <a href="#"><img src="./images/logo-personalpic/30px my logo for website.png" alt="logo"></a>
+            <a href="./index.html"><img src="./images/logo-personalpic/30px my logo for website.png" alt="logo"></a>
             <ul class="nav-buttons work-nav">
-                <li><a href="#">Work</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">About</a></li>
-                <li class="nav-page-on"><a href="#">Contact</a></li>
+                <li><a href="./work.html">Work</a></li>
+                <li><a href="./blog.html">Blog</a></li>
+                <li><a href="./about.html">About</a></li>
+                <li class="nav-page-on"><a href="./contact.html">Contact</a></li>
             </ul>
         </nav>
 
@@ -27,7 +27,7 @@
                 <h1>Contact</h1>
             </div>
 
-                <form action="">
+                <form >
                     <div class="userinfo">
                         <div class="row1">
                             <div class="fill-section">
@@ -69,7 +69,7 @@
         <footer class="footer">
             <div class="left-footer">
                 <p>FOLLOW</p>
-                <a href="#">Instagram</a>
+                <a href="https://www.instagram.com/miroslens/">Instagram</a>
             </div>
     
             <div class="right-footer">
