--- a/work-photography.html
+++ b/work-photography.html
@@ -11,34 +11,53 @@
 <body class="work-page-body">
     <div class="container">
         <nav class="main-nav">
-            <a href="#"><img src="./images/logo-personalpic/30px my logo for website.png" alt="logo"></a>
+            <a href="./index.html"><img src="./images/logo-personalpic/30px my logo for website.png" alt="logo"></a>
             <ul class="nav-buttons work-nav">
-                <li><a href="#">Work</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="./work.html">Work</a></li>
+                <li><a href="./blog.html">Blog</a></li>
+                <li><a href="./about.html">About</a></li>
+                <li><a href="./contact.html">Contact</a></li>
             </ul>
         </nav>
         <div class="sub-nav">
-            <h1>Work</h1>
+            <div class="title-wave">
+                <h1>Work</h1>
+                <img src="./images/waves-design/subtitle-wave.png" alt=" shape design">
+            </div>
             <ul class="sub-nav-buttons">
-                <li><a href="#">All</a></li>
-                <li><a href="#">Photography</a></li>
-                <li><a href="#">Videography</a></li>
-                <li><a href="#">Animation</a></li>
-                <li><a href="#">Agumented Posters</a></li>
+                <li><a href="./work.html">All</a></li>
+                <li class="nav-page-on"><a href="./work-photography.html">Photography</a></li>
+                <li><a href="./videography.html">Videography</a></li>
+                <li><a href="./work-animation.html">Animation</a></li>
+                <li><a href="./Agumented-posters.html">Agumented Posters</a></li>
             </ul>
         </div>
 
-
         <main >
+            <div class="photo-gallery">
+                <a href="#">
+                    <div class="main-gallery-preview1 gallery-img-edit1">
+                       <p class="gallery-text">Street Photography</p>
+                       <img class="gallery-img"src="./images/street-photography/IMG_0953.JPG" alt=" street photography cover page">
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="main-gallery-preview2 gallery-img-edit2">
+                        <p  class="gallery-text">Concptual Fashion Photography</p>
+                        <img class="gallery-img " src="./images/conceptual-street-photography/IMG_6804.jpg" alt=" conceptual street photography cover page">
+                    </div>
+                </a>
+                
 
 
+            </div>
         </main>
+
+
         <footer class="footer">
             <div class="left-footer">
                 <p>FOLLOW</p>
-                <a href="#">Instagram</a>
+                <a href="https://www.instagram.com/miroslens/">Instagram</a>
             </div>
     
             <div class="right-footer">
