--- a/work-photography.html
+++ b/work-photography.html
@@ -11,7 +11,7 @@
 <body class="work-page-body">
     <div class="container">
         <nav class="main-nav">
-            <a href="./index.html"><img src="./images/logo-personalpic/30px my logo for website.png" alt="logo"></a>
+            <a href="./index.html"><img src="./images/logo-personalpic/biggest logo for website.png" alt="logo"></a>
             <ul class="nav-buttons work-nav">
                 <li><a href="./work.html">Work</a></li>
                 <li><a href="./blog.html">Blog</a></li>
@@ -35,21 +35,18 @@
 
         <main >
             <div class="photo-gallery">
-                <a href="#">
+                <a href="./work-street.html">
                     <div class="main-gallery-preview1 gallery-img-edit1">
                        <p class="gallery-text">Street Photography</p>
                        <img class="gallery-img"src="./images/street-photography/IMG_0953.JPG" alt=" street photography cover page">
                     </div>
                 </a>
-                <a href="#">
+                <a href="./work-fashion.html">
                     <div class="main-gallery-preview2 gallery-img-edit2">
                         <p  class="gallery-text">Concptual Fashion Photography</p>
                         <img class="gallery-img " src="./images/conceptual-street-photography/IMG_6804.jpg" alt=" conceptual street photography cover page">
                     </div>
                 </a>
-                
-
-
             </div>
         </main>
 
