--- a/work.html
+++ b/work.html
@@ -11,7 +11,7 @@
 <body class="work-page-body">
     <div class="container">
         <nav class="main-nav">
-            <a href="./index.html"><img src="./images/logo-personalpic/30px my logo for website.png" alt="logo"></a>
+            <a href="./index.html"><img src="./images/logo-personalpic/biggest logo for website.png" alt="logo"></a>
             <ul class="nav-buttons work-nav">
                 <li class="nav-page-on"><a href="./work.html">Work</a></li>
                 <li><a href="./blog.html">Blog</a></li>
@@ -36,19 +36,19 @@
 
         <main  class="main">
             <div class="row1">
-                <a href="#">
+                <a href="./work-street.html">
                     <div class="main-gallery-preview1">
                        <p class="main-gallery-text">Street Photography</p>
                        <img class="gallery-img"src="./images/street-photography/IMG_0953.JPG" alt=" street photography cover page">
                     </div>
                 </a>
-                <a href="#">
+                <a href="./work-fashion.html">
                     <div class="main-gallery-preview2">
                         <p  class="main-gallery-text">Concptual Fashion Photography</p>
                         <img class="gallery-img" src="./images/conceptual-street-photography/IMG_6804.jpg" alt=" conceptual street photography cover page">
                     </div>
                 </a>
-                <a href="#">
+                <a href="./work-animation.html">
                     <div class="main-gallery-preview3">
                         <p  class="main-gallery-text">Animation</p>
                         <img  class="gallery-img" src="./images/animation/silhoutte lost oblject character-1.png" alt=" Animation cover page">
@@ -56,13 +56,13 @@
                 </a>
             </div>
             <div class="row2">
-                <a href="#">
+                <a href="./videography.html">
                     <div class="main-gallery-preview4">
                         <p  class="main-gallery-text">Videography</p>
                         <img  class="gallery-img" src="./images/videography/Screenshot (891).png" alt=" Videography cover page">
                     </div>
                 </a>
-                <a href="#">
+                <a href="./Agumented-posters.html">
                     <div class="main-gallery-preview5">
                         <p  class="main-gallery-text">Agumneted Poster</p>
                         <img  class="gallery-img" src="./images/artifact1/T12 Poster design on Photoshop with black in cracks.png" alt=" Agumneted Poster cover page">
