--- a/Agumented-posters.html
+++ b/Agumented-posters.html
@@ -11,7 +11,7 @@
 <body class="work-page-body">
     <div class="container">
         <nav class="main-nav">
-            <a href="./index.html"><img src="./images/logo-personalpic/30px my logo for website.png" alt="logo"></a>
+            <a href="./index.html"><img src="./images/logo-personalpic/biggest logo for website.png" alt="logo"></a>
             <ul class="nav-buttons work-nav">
                 <li class="nav-page-on"><a href="./work.html">Work</a></li>
                 <li><a href="./blog.html">Blog</a></li>
