--- a/blog-page2.html
+++ b/blog-page2.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <nav class="main-nav">
-            <a href="./index.html"><img src="./images/logo-personalpic/30px my logo for website.png" alt="logo"></a>
+            <a href="./index.html"><img src="./images/logo-personalpic/biggest logo for website.png" alt="logo"></a>
             <ul class="nav-buttons">
                 <li><a href="./work.html">Work</a></li>
                 <li class="nav-page-on"><a href="./blog.html" >Blog</a></li>
