--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <nav class="main-nav">
-            <a href="./index.html"><img src="./images/logo-personalpic/30px my logo for website.png" alt="logo"></a>
+            <a href="./index.html"><img src="./images/logo-personalpic/biggest logo for website.png" alt="logo"></a>
             <ul class="nav-buttons">
                 <li><a href="./work.html">Work</a></li>
                 <li class="nav-page-on"><a href="./blog.html" >Blog</a></li>
@@ -35,7 +35,7 @@
                        <h2>Partcipating in a number of screenings.</h2>
                        <p>by Mireille Hossam</p>
                        <p class="publish-date">November, 2022</p>
-                       <a href="#" class="readmore-link">Read More...</a>
+                       <a href="./blog-page1.html" class="readmore-link">Read More...</a>
                     </div>
                 </div>
                 <div class="blog">
@@ -45,7 +45,7 @@
                            <h2>Partcipating in a number of screenings.</h2>
                            <p>by Mireille Hossam</p>
                            <p class="publish-date">November, 2022</p>
-                           <a href="#" class="readmore-link">Read More...</a>
+                           <a href="./blog-page2.html" class="readmore-link">Read More...</a>
                         </div>
                 </div>
 
@@ -56,7 +56,7 @@
                                <h2>Partcipating in a number of screenings.</h2>
                                <p>by Mireille Hossam</p>
                                <p class="publish-date">November, 2022</p>
-                               <a href="#" class="readmore-link">Read More...</a>
+                               <a href="./blog-page3.html" class="readmore-link">Read More...</a>
                             </div>
                  </div>
             </div>
