--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <nav class="main-nav">
-           <a href="./index.html"><img src="./images/logo-personalpic/30px my logo for website.png" alt="logo"></a>
+           <a href="./index.html"><img src="./images/logo-personalpic/biggest logo for website.png" alt="logo"></a>
            <ul class="nav-buttons">
                <li><a href="./work.html">Work</a></li>
                <li><a href="./blog.html">Blog</a></li>
@@ -25,7 +25,7 @@
            <p class="main-description-1">Hello, I am</p> 
            <p class="main-description-2">Mireille</p>
            <p class="main-description-3">Photographer/ Videographer</p>
-           <button><a href="#">Discover me</a></button>
+           <button><a href="./contact.html">Discover me</a></button>
         </div>
         
             <img src="./images/waves-design/personal pic-wave.png" alt="personal picture" class="personal-img">
