video carousels added

--- a/Agumented-posters.html
+++ b/Agumented-posters.html
@@ -35,13 +35,13 @@
 
         <main >
             <div class="photo-gallery">
-                <a href="#">
+                <a href="./agumented-carousel.html">
                     <div class="main-gallery-preview1 gallery-img-edit2">
                        <p class="main-gallery-text">Artefact 1</p>
                        <img class="gallery-img" src="./images/artifact1/T12 Poster design on Photoshop with black in cracks.png" alt=" Wobbly Gobbly cover page">
                     </div>
                 </a>
-                <a href="#">
+                <a href="./agumented-carousel.html">
                     <div class="main-gallery-preview2 gallery-img-edit1">
                         <p class="main-gallery-text">Coming SOON!</p>
                         
