--- a/videography.html
+++ b/videography.html
@@ -35,11 +35,9 @@
                 <li><a href="./Agumented-posters.html">Agumented Posters</a></li>
             </ul>
         </div>
-
-
         <main >
             <div class="video-gallery">
-                <a href="#">
+                <a href="./video2-carousel.html">
                     <div class="main-gallery-preview1 gallery-img-edit3">
                        <p class="gallery-text">Golden Years <span>This is a short documentary that sheds light on the
                         concepts that we as humans are brought up with, and when 
@@ -49,7 +47,7 @@
                        <img class="gallery-img" src="./images/videography/Screenshot (891).png" alt=" Golden Years Video">
                     </div>
                 </a>
-                <a href="#">
+                <a href="./video2-carousel.html">
                     <div class="main-gallery-preview2 gallery-img-edit3">
                         <p class="gallery-text">Artefact2 (Viral Video) <span>This is a group project made to raise awarness
                              to all genneration Z users on how social media is manipulating them one way ot the other.</span>
@@ -58,8 +56,6 @@
                         <img class="gallery-img" src="./images/videography/Screenshot (891).png" alt=" Artefact2 viral Video">
                     </div>
                 </a>
-                
-
 
             </div>
         </main>
