--- a/work-street.html
+++ b/work-street.html
@@ -10,6 +10,7 @@
 </head>
 <body class="work-page-body">
     <div class="container">
+      <!-- <div class="all-nav-section"> -->
         <nav class="main-nav">
             <a href="./index.html"><img src="./images/logo-personalpic/biggest logo for website.png" alt="logo"></a>
             <ul class="nav-buttons work-nav">
@@ -19,7 +20,6 @@
                 <li><a href="./contact.html">Contact</a></li>
             </ul>
         </nav>
-
 
         <div class="sub-nav">
             <div class="title-wave">
@@ -34,11 +34,13 @@
                 <li><a href="./Agumented-posters.html">Agumented Posters</a></li>
             </ul>
         </div>
-
-
         <div class="sub-title">
             <p>Street Photography</p>
         </div>
+        <!-- </div> -->
+    <!-- <div class="main-section-footer"> -->
+      
+        
 
     <main>
         <div class="container-gallery">
@@ -155,6 +157,7 @@
                 <p id="phone-num">01201501100</p>
             </div>
         </footer>
+        <!-- </div> -->
     </div>
 
 
