--- a/work.html
+++ b/work.html
@@ -10,6 +10,7 @@
 </head>
 <body class="work-page-body">
     <div class="container">
+        <!-- <div class="all-nav-section"> -->
         <nav class="main-nav">
             <a href="./index.html"><img src="./images/logo-personalpic/biggest logo for website.png" alt="logo"></a>
             <ul class="nav-buttons work-nav">
@@ -32,8 +33,9 @@
                 <li><a href="./Agumented-posters.html">Agumented Posters</a></li>
             </ul>
         </div>
+    <!-- </div> -->
 
-
+    <!-- <div class="main-section-footer"> -->
         <main  class="main">
             <div class="row1">
                 <a href="./work-street.html">
@@ -84,6 +86,7 @@
                 <p id="phone-num">01201501100</p>
             </div>
         </footer>
+    <!-- </div> -->
 
     </div>
     
