--- a/fashion-carosel.html
+++ b/fashion-carosel.html
@@ -15,6 +15,8 @@
 </head>
 
 <body class="body">
+    <a class="exit" href="./work-fashion.html"><img width= 30px height= 30px src="./images/logo-personalpic/x-icon.png" alt="exit icon"></a> 
+
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -67,9 +69,9 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </a>
-        <div class="button-container">
+        <!-- <div class="button-container">
           <button><a href="./work-photography.html" class="button">Back to page</a></button>
-        </div>
+        </div> -->
         
     </div>
     
