--- a/video-carousel.html
+++ b/video-carousel.html
@@ -5,14 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Videography</title>
+    <link rel="stylesheet" href="./video-carousel.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./allstyles.css">
 </head>
-<body>
-     <!-- Carousel wrapper -->
+<body class="bg">
+      <!-- Carousel wrapper -->
 <div
 id="carouselVideoExample"
 class="carousel slide carousel-fade"
@@ -33,40 +34,61 @@ data-mdb-ride="carousel"
     data-mdb-target="#carouselVideoExample"
     data-mdb-slide-to="1"
     aria-label="Slide 2"
+    class="nav-button"
   ></button>
-  <button
-    type="button"
-    data-mdb-target="#carouselVideoExample"
-    data-mdb-slide-to="2"
-    aria-label="Slide 3"
-  ></button>
+  <!-- <button -->
+    <!-- type="button" -->
+    <!-- data-mdb-target="#carouselVideoExample" -->
+    <!-- data-mdb-slide-to="2" -->
+    <!-- aria-label="Slide 3" -->
+  <!-- ></button> -->
 </div>
 
 <!-- Inner -->
 <div class="carousel-inner">
   <!-- Single item -->
   <div class="carousel-item active">
-    <video class="img-fluid" autoplay loop>
+    <video class="img-fluid"  >
       <!-- <source src="https://youtu.be/BB3VOEBFwRg" type="video/mp4" /> -->
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/BB3VOEBFwRg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe width="1333" height="750" src="https://www.youtube.com/embed/BB3VOEBFwRg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </video>
     <div class="carousel-caption d-none d-md-block">
       <h5>Golden Years</h5>
+      <!-- <p>
+        Nulla vitae elit libero, a pharetra augue mollis interdum.
+      </p> -->
     </div>
   </div>
 
   <!-- Single item -->
   <div class="carousel-item">
-    <video class="img-fluid" autoplay loop>
+    <video class="img-fluid" autoplay loop >
       <source src="https://mdbcdn.b-cdn.net/img/video/forest.mp4" type="video/mp4" />
     </video>
     <div class="carousel-caption d-none d-md-block">
-      <h5>Artifact 2</h5>
+      <h5>Artefact2</h5>
+      <!-- <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+      </p> -->
     </div>
   </div>
 
-  
-
+  <!-- Single item -->
+  <!-- <div class="carousel-item">
+    <video class="img-fluid" autoplay loop muted>
+      <source
+        src="https://mdbcdn.b-cdn.net/img/video/Agua-natural.mp4"
+        type="video/mp4"
+      />
+    </video>
+    <div class="carousel-caption d-none d-md-block">
+      <h5>Third slide label</h5>
+      <p>
+        Praesent commodo cursus magna, vel scelerisque nisl consectetur.
+      </p>
+    </div> -->
+  <!-- </div> -->
+</div>
 <!-- Inner -->
 
 <!-- Controls -->
@@ -77,7 +99,7 @@ data-mdb-ride="carousel"
   data-mdb-slide="prev"
 >
   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-  <span class="visually-hidden">Previous</span>
+  <!-- <span class="visually-hidden">Previous</span> -->
 </button>
 <button
   class="carousel-control-next"
@@ -86,10 +108,12 @@ data-mdb-ride="carousel"
   data-mdb-slide="next"
 >
   <span class="carousel-control-next-icon" aria-hidden="true"></span>
-  <span class="visually-hidden">Next</span>
+  <!-- <span class="visually-hidden">Next</span> -->
 </button>
 </div>
 <!-- Carousel wrapper -->
+
+
     
 </body>
 </html>
