makeing nav of fixed position

--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div class="container">
+        <div class="fixed-nav pink-bg">
         <nav class="main-nav">
            <a href="./index.html"><img src="./images/logo-personalpic/biggest logo for website.png" alt="logo"></a>
            <ul class="nav-buttons">
@@ -19,14 +20,16 @@
                <li><a href="./contact.html">Contact</a></li>
            </ul>
        </nav>
+       <div class="page-title">
+        <div class="title-wave">
+           <h1>About</h1>
+           <img src="./images/waves-design/subtitle-wave.png" alt=" shape design">
+        </div>
+    </div>
+    </div>
 
+    <div class="main-section-footer main-about">
        <main>
-            <div class="page-title">
-                <div class="title-wave">
-                   <h1>About</h1>
-                   <img src="./images/waves-design/subtitle-wave.png" alt=" shape design">
-                </div>
-            </div>
             <div class="about-container">
                 <div class="about-parag1">
                     <p> <span class="hi">Hi,</span> <span class="Im"> I’m</span> <span class="name">Mireille Hossam.</span> </p>
@@ -113,6 +116,7 @@
             <p id="phone-num">01201501100</p>
         </div>
        </footer>
+       </div>
     </div>
     
 </body>
