--- a/blog.html
+++ b/blog.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog page</title>
+    <link rel="stylesheet" href="./blog-page1,2,3.css">
     <link rel="stylesheet" href="./blog.css">
     <link rel="stylesheet" href="./allstyles.css">
 </head>
 <body>
     <div class="container">
+        <div class="fixed-nav pink-bg">
         <nav class="main-nav">
             <a href="./index.html"><img src="./images/logo-personalpic/biggest logo for website.png" alt="logo"></a>
             <ul class="nav-buttons">
@@ -19,14 +21,17 @@
                 <li><a href="./contact.html">Contact</a></li>
             </ul>
         </nav>
-
-        <main>
-            <div class="page-title">
-                <div class="title-wave">
-                    <h1>Blogs</h1>
-                    <img src="./images/waves-design/subtitle-wave.png" alt=" shape design">
-                </div>
+        <div class="page-title">
+            <div class="title-wave">
+                <h1>Blogs</h1>
+                <img src="./images/waves-design/subtitle-wave.png" alt=" shape design">
             </div>
+        </div>
+    </div>
+    <div class="main-section-footer main-blog">
+        <main>
+            <div class="big-block-container">
+                <a href="#" class="arrow-icons left-arrow"><img src="./images/logo-personalpic/left-arrow.png" alt=" left arrow icon"></a>
             <div class="blogs">
                 <div class="blog"> 
                     <img src="./images/blog-covers/CIFF-44.jpg" alt="CIFF cover page">
@@ -60,6 +65,8 @@
                             </div>
                  </div>
             </div>
+            <a href="./blog-page2.html"  class="arrow-icons right-arrow"  ><img src="./images/logo-personalpic/right-arrow.png" alt=" left arrow icon"></a>
+        </div>
 
         </main>
 
@@ -75,6 +82,7 @@
                 <p id="phone-num">01201501100</p>
             </div>
         </footer>
+    </div>
 </div>
 </body>
 </html>
