--- a/work-animation.html
+++ b/work-animation.html
@@ -11,6 +11,7 @@
 
 <body class="work-page-body">
     <div class="container">
+        <div class="fixed-nav">
         <nav class="main-nav">
             <a href="./index.html"><img src="../images/logo-personalpic/biggest logo for website.png" alt="logo"></a>
             <ul class="nav-buttons work-nav">
@@ -35,8 +36,9 @@
                 <li><a href="./Agumented-posters.html">Agumented Posters</a></li>
             </ul>
         </div>
+        </div>
 
-
+        <div class="main-section-footer  main-animation">
         <main >
             <div class="photo-gallery">
                 <a href="#">
@@ -55,9 +57,6 @@
         </main>
 
 
-
-
-
         <footer class="footer">
             <div class="left-footer">
                 <p>FOLLOW</p>
@@ -71,7 +70,7 @@
             </div>
         </footer>
     </div>
-
+</div>
 
 
     
