--- a/work-fashion.html
+++ b/work-fashion.html
@@ -10,6 +10,7 @@
 </head>
 <body  class="work-page-body">
     <div class="container">
+        <div class="fixed-nav">
         <nav class="main-nav">
             <a href="./index.html"><img src="./images/logo-personalpic/biggest logo for website.png" alt="logo"></a>
             <ul class="nav-buttons work-nav">
@@ -39,7 +40,8 @@
         <div class="sub-title">
             <p>Conceptual Street Fashion Photography</p>
         </div>
-
+    </div>
+    <div class="main-section-footer">
     <main>
         <div class="container-gallery">
            <div class="colum1">
@@ -142,8 +144,6 @@
 
 
 
-
-
         <footer class="footer">
             <div class="left-footer">
                 <p>FOLLOW</p>
@@ -157,7 +157,7 @@
             </div>
         </footer>
     </div>
-
+  </div>
     
 </body>
 </html>
