--- a/Agumented-posters.html
+++ b/Agumented-posters.html
@@ -10,6 +10,7 @@
 </head>
 <body class="work-page-body">
     <div class="container">
+        <div class="fixed-nav">
         <nav class="main-nav">
             <a href="./index.html"><img src="./images/logo-personalpic/biggest logo for website.png" alt="logo"></a>
             <ul class="nav-buttons work-nav">
@@ -19,21 +20,22 @@
                 <li><a href="./contact.html">Contact</a></li>
             </ul>
         </nav>
-
-
         <div class="sub-nav">
-            <h1>Work</h1>
+            <div class="title-wave">
+               <h1>Work</h1>
+               <img src="./images/waves-design/subtitle-wave.png" alt=" shape design">
+            </div>
             <ul class="sub-nav-buttons">
                 <li ><a href="./work.html">All</a></li>
                 <li ><a href="./work-photography.html">Photography</a></li>
-                <li class="nav-page-on"><a href="./videography.html">Videography</a></li>
+                <li ><a href="./videography.html">Videography</a></li>
                 <li ><a href="./work-animation.html">Animation</a></li>
-                <li><a href="./Agumented-posters.html">Agumented Posters</a></li>
+                <li class="nav-page-on"><a href="./Agumented-posters.html">Agumented Posters</a></li>
             </ul>
         </div>
-
-
-        <main >
+    </div>
+<main >
+    <div class="main-section-footer  main-video">
             <div class="photo-gallery">
                 <a href="./agumented-carousel.html">
                     <div class="main-gallery-preview1 gallery-img-edit2">
@@ -51,8 +53,6 @@
             </div>
         </main>
 
-
-
         <footer class="footer">
             <div class="left-footer">
                 <p>FOLLOW</p>
@@ -65,6 +65,7 @@
                 <p id="phone-num">01201501100</p>
             </div>
         </footer>
+    </div>
     </div>
 
 
