--- a/contact.html
+++ b/contact.html
@@ -6,25 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact page</title>
     <link rel="stylesheet" href="./contact.css">
+    <link rel="stylesheet" href="./blog-page1,2,3.css">
     <link rel="stylesheet" href="./allstyles.css">
 </head>
 <body>
     <div class="container">
-        <nav class="main-nav">
-            <a href="./index.html"><img src="./images/logo-personalpic/biggest logo for website.png" alt="logo"></a>
-            <ul class="nav-buttons work-nav">
-                <li><a href="./work.html">Work</a></li>
-                <li><a href="./blog.html">Blog</a></li>
-                <li><a href="./about.html">About</a></li>
-                <li class="nav-page-on"><a href="./contact.html">Contact</a></li>
-            </ul>
-        </nav>
-
-        <main>
+        <div class="fixed-nav pink-bg trans-bg">
+            <nav class="main-nav">
+                <a href="./index.html"><img src="./images/logo-personalpic/biggest logo for website.png" alt="logo"></a>
+                <ul class="nav-buttons">
+                    <li><a href="./work.html">Work</a></li>
+                    <li ><a href="./blog.html" >Blog</a></li>
+                    <li><a href="./about.html">About</a></li>
+                    <li class="nav-page-on"><a href="./contact.html">Contact</a></li>
+                </ul>
+            </nav>
             <div class="page-title">
-                <h1>Contact</h1>
+                <div class="title-wave">
+                    <h1>Contact</h1>
+                </div>
             </div>
+        </div>
 
+        <div class="main-section-footer main-blog">
+        <main>
                 <form >
                     <div class="userinfo">
                         <div class="row1">
@@ -76,7 +81,7 @@
                 <p id="phone-num">01201501100</p>
             </div>
         </footer>
-
+    </div>
     </div>
     
 </body>
