--- a/videography.html
+++ b/videography.html
@@ -10,6 +10,7 @@
 </head>
 <body class="work-page-body">
     <div class="container">
+        <div class="fixed-nav">
         <nav class="main-nav">
             <a href="./index.html"><img src="./images/logo-personalpic/biggest logo for website.png" alt="logo"></a>
             <ul class="nav-buttons work-nav">
@@ -35,6 +36,8 @@
                 <li><a href="./Agumented-posters.html">Agumented Posters</a></li>
             </ul>
         </div>
+    </div>
+    <div class="main-section-footer  main-video">
         <main >
             <div class="video-gallery">
                 <a href="./video2-carousel.html">
@@ -73,6 +76,7 @@
                 <p id="phone-num">01201501100</p>
             </div>
         </footer>
+    </div>
     </div>
 
     
