--- a/work-photography.html
+++ b/work-photography.html
@@ -10,6 +10,7 @@
 </head>
 <body class="work-page-body">
     <div class="container">
+        <div class="fixed-nav">
         <nav class="main-nav">
             <a href="./index.html"><img src="./images/logo-personalpic/biggest logo for website.png" alt="logo"></a>
             <ul class="nav-buttons work-nav">
@@ -32,7 +33,8 @@
                 <li><a href="./Agumented-posters.html">Agumented Posters</a></li>
             </ul>
         </div>
-
+    </div>
+    <div class="main-section-footer main-photo">
         <main >
             <div class="photo-gallery">
                 <a href="./work-street.html">
@@ -63,7 +65,7 @@
                 <p id="phone-num">01201501100</p>
             </div>
         </footer>
-
+        </div>
     </div>
     
 </body>
